Checktyle Cleanup and profile for dev/prod
Checktyle Cleanup and profile for dev/prod